# qa_guru_5_lesson_24

./: .env.example  .gitignore  config.py  conftest.py  pyproject.toml
tests/: test_conplete_onboarding.py  test_find_article.py
utils/: assert_helper.py  attach.py  path_helper.py
